# introgression_domain_adaptation

./: .gitignore  README.md  _model.py  _train.py  automate.sh  cnn.py  config.yaml  conv1dModel.py  conv1dTest.py  conv1dTrain.py  conv1d_cdan_test.py  conv1d_cdan_train.py  conv1d_dann_test.py  conv1d_dann_train.py  conv1d_keras_test.py  conv1d_keras_test_mispec.py  conv1d_keras_train.py  conv2d_cdan_train.py  conv2d_dann_train.py  conv2d_keras_train.py  data.py  env.txt  env.yaml  expNotes.md  info.py  scenario-1.yaml  secondaryContact.py  sim.py  singleChannelTrain.py  spidnaModel.py  spidnaTrain.py  test.py  testConv1d.py  testConv1d_cdan.py  testConv1d_dann.py  testConv1d_keras.py  testConv1d_keras_mispec.py  testMispecification.py  testSpidna.py  testThetaSpidna.py  (+14 more)
bears/: README.md  map.py  tmp.py
conv1d/: conv1dTest.py  conv1dTrain.py
dadi/: dadi.nf  dadi_model_selection.py  np_to_dadi.fish  np_to_dadi.py
early_pytorch_testing/: data.py  plot.py  sim.py  summary.py  testFlagel.py  trainFlagel.py  training.py
exp1/: conv1d_cdan_train.py  conv1d_dann_train.py  conv1d_keras_train.py  conv2d_cdan_train.py  (+4 more)
kerry_evo/simulations/: pyproject.toml
kerry_evo/simulations/config/: bear-secondary-contact-1.yaml  bear-secondary-contact-ghost-1.yaml  bear-secondary-contact-ghost-2.yaml  general-secondary-contact-1.yaml  general-secondary-contact-ghost-1.yaml  run.sh
sim-wrapper/: pyproject.toml
sim-wrapper/sim_wrapper/: genotype_matrix.py  numpy_dataset.py  numpy_matrix_dataset.py  simulator.py
sim-wrapper/test/: secondaryContact.yaml  secondary_contact.py
(+514 files in other folders)
