[tool.poetry]
name = "sim-wrapper"
version = "0.1.0"
description = ""
authors = ["Kerry Cobb <cobbkerry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
tqdm = "^4.66.2"
oyaml = "^1.0"
tskit = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
