[tool.poetry]
name = "simulations"
version = "0.1.0"
description = ""
authors = ["kerrycobb <cobbkerry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sim-wrapper = {path = "/mnt/home/kc2824/popAI/sim-wrapper"}
fire = "^0.6.0"
msprime = "^1.3.1"
tskit = "^0.5.6"
pydantic = "^2.7.1"

[tool.poetry.scripts]
ghost-secondary-contact = "simulations.secondary_contact_ghost:cli"
ghost-secondary-contact2 = "simulations.secondary_contact_ghost2:cli"
secondary-contact = "simulations.secondary_contact:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
